--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,16 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>2.5.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars.npm</groupId>
+			<artifactId>moment</artifactId>
+			<version>2.29.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>font-awesome</artifactId>
+			<version>4.7.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
