--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.github.afkbrb</groupId>
+			<artifactId>github-avatar-generator</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
